@@ -63,7 +63,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-messaging:20.1.5'
+    implementation 'com.google.firebase:firebase-messaging:20.2.1'
 
     //Lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
