@@ -8,7 +8,7 @@ import io.getstream.chat.android.client.logger.ChatLogLevel
 import io.getstream.chat.android.client.logger.ChatLogger
 import io.getstream.chat.android.client.models.User
 import io.getstream.chat.android.client.notifications.ChatNotifications
-import io.getstream.chat.android.client.notifications.options.ChatNotificationConfig
+import io.getstream.chat.android.client.notifications.handler.ChatNotificationHandler
 import io.getstream.chat.android.client.parser.ChatParserImpl
 import io.getstream.chat.android.client.socket.ChatSocket
 import io.getstream.chat.android.client.token.FakeTokenManager
@@ -37,7 +37,7 @@ internal class ClientConnectionTests {
         1000,
         1000,
         ChatLogger.Config(ChatLogLevel.NOTHING, null),
-        ChatNotificationConfig(context),
+        ChatNotificationHandler(context),
         FakeTokenManager(token)
     )
 
