@@ -1,3 +1,7 @@
+# To be released:
+
+- Decouple cloud messages handler logic from configuration data
+
 # 1.13.1 - Fri 7 Aug 2020
 
 - Fix DateParser
